# insight-reader-2

./: .pre-commit-config.yaml  AGENTS.md  README.md  backend-api.md  editor.html  index.html  live-text.html  microsoft_edge_voices.txt  package-lock.json  package.json  screenshot.html  settings.html  vite.config.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  tauri.macos.conf.json  tauri.metadata.template.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json  editor.json  live-text.json  screenshot.json  settings.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: backend-prompt.toml  capture-screenshot-and-ocr.toml  check-polly-credentials.toml  download-voice.toml  get-clipboard-text.toml  get-config.toml  get-download-progress.toml  get-editor-initial-text.toml  get-hotkey-status.toml  get-platform.toml  get-polly-voice.toml  get-selected-text.toml  get-text-or-clipboard.toml  hide-main-window.toml  list-downloaded-voices.toml  list-microsoft-voices.toml  list-piper-voices.toml  list-polly-voices.toml  open-editor-window.toml  open-live-text-viewer.toml  open-screenshot-viewer.toml  open-settings-window.toml  refresh-piper-voices.toml  save-config.toml  save-polly-voice.toml  take-editor-initial-text.toml  take-live-text-data.toml  take-live-text-image-path.toml  take-screenshot-path.toml  tts-pause.toml  tts-set-speed.toml  tts-set-volume.toml  tts-speak.toml  tts-stop.toml  tts-switch-provider.toml
src-tauri/src/: action_socket.rs  actions.rs  backend.rs  commands_config.rs  commands_tts.rs  commands_voices.rs  config.rs  (+11 more)
(+168 files in other folders)
