[package]
name = "insight-reader-2"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "insight_reader_2_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
arboard = { version = "3.2", features = ["wayland-data-control"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rodio = "0.19"
thiserror = "1.0"
image = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
msedge-tts = "0.2"
dirs = "5.0"
aws-sdk-polly = "1"
aws-config = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"

[target.'cfg(target_os = "macos")'.dependencies]
macos-accessibility-client = "0.0.1"

[target.'cfg(target_os = "windows")'.dependencies]
enigo = "0.2"
